# devgo

./: .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  CLAUDE.md  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go
.claude/: settings.local.json
.claude/skills/release/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
cmd/: BUILD.bazel  build.go  build_test.go  container_name_test.go  dotfiles_apply_test.go  dotfiles_exec.go  dotfiles_exec_test.go  down.go  down_test.go  exec.go  exec_test.go  features.go  init.go  init_test.go  list.go  list_test.go  profile_test.go  read_configuration.go  read_configuration_test.go  root.go  root_test.go  shell.go  shell_test.go  stop.go  stop_test.go  up.go  up_test.go  user_commands.go  user_commands_test.go
docs/: dotfiles.md  profiles.md
pkg/config/: BUILD.bazel  config.go  config_test.go
pkg/constants/: BUILD.bazel  labels.go
pkg/devcontainer/: BUILD.bazel  devcontainer.go  devcontainer_test.go
pkg/dotfiles/: dotfiles.go  dotfiles_test.go
pkg/features/: dockerfile.go  dockerfile_test.go  feature.go  feature_test.go  features.go  oci.go  ref.go  ref_test.go
pkg/sshagent/: sshagent.go  sshagent_test.go
test/fixtures/: BUILD.bazel  build-advanced.json  dockerfile-build.json  features.json  initialize-command.json  legacy-dockerfile.json  post-start-command.json  simple-image.json  update-content-command.json
test/integration/: BUILD.bazel  docker_compose_test.go  go.mod  go.sum  initialize_command_test.go  run_user_commands_test.go  shell_test.go  up_test.go
