load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/garaemon/devgo
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "devgo_lib",
    srcs = ["main.go"],
    importpath = "github.com/garaemon/devgo",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "devgo",
    embed = [":devgo_lib"],
    visibility = ["//visibility:public"],
)
